# rvalue_references

./: CMakeLists.txt  main.cpp  move.h  type_deduction.h
